--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -1,21 +1,20 @@
-\DeclareAcronym{EV}{short=EV,long=Extracellular Vesicle}
-\DeclareAcronym{SVM}{long=Support Vector Machine}
-\DeclareAcronym{ROC}{long=Receiver Operating Characteristic}
-\DeclareAcronym{KNN}{long=K Nearest Neighbors}
-\DeclareAcronym{SRA}{long=Sequence Read Archive}
-\DeclareAcronym{CEA}{long=carcinoembryonic antigen}
-\DeclareAcronym{GSE}{long=Gene Set Enrichment}
-\DeclareAcronym{OU}{long=Ornstein-Uhlenbeck}
-\DeclareAcronym{OUCH}{long=\ac{OU} Comparative Hypotheses}
-\DeclareAcronym{TSI}{long=Tissue Specificity Index}
-\DeclareAcronym{SRA}{long=Sequence Read Archive}
-\DeclareAcronym{GH}{long=Growth Hormone}
-\DeclareAcronym{PSG}{long=Pregnancy-Specific Glycoprotein}
-\DeclareAcronym{PAG}{long=Pregnancy-Associated Glycoprotein}
-\DeclareAcronym{GO}{long=Gene Ontology}
-\DeclareAcronym{FDR}{long=False Discovery Rate}
-\DeclareAcronym{gsea}{short=GSEA,long=gene set enrichment analysis}
-\DeclareAcronym{FPKM}{long=Fragments Per Kilobase of exon per Million reads}
+\DeclareAcronym{EV}{short=EV,long={Extracellular Vesicle}}
+\DeclareAcronym{SVM}{short=SVM,long={Support Vector Machine}}
+\DeclareAcronym{ROC}{short=ROC,long={Receiver Operating Characteristic}}
+\DeclareAcronym{KNN}{short=KNN,long={K Nearest Neighbors}}
+\DeclareAcronym{SRA}{short=SRA,long={Sequence Read Archive}}
+\DeclareAcronym{CEA}{short=CEA,long={carcinoembryonic antigen}}
+\DeclareAcronym{GSE}{short=GSE,long={Gene Set Enrichment}}
+%\DeclareAcronym{OU}{short=OU,long=Ornstein-Uhlenbeck}
+%\DeclareAcronym{OUCH}{short=OUCH,long=\ac*{OU} Comparative Hypotheses}
+\DeclareAcronym{TSI}{short=TSI,long=Tissue Specificity Index}
+\DeclareAcronym{GH}{short=GH,long=Growth Hormone}
+\DeclareAcronym{PSG}{short=PSG,long={Pregnancy-Specific Glycoprotein}}
+\DeclareAcronym{PAG}{short=PAG,long={Pregnancy-Associated Glycoprotein}}
+\DeclareAcronym{GO}{short=GO,long={Gene Ontology}}
+\DeclareAcronym{FDR}{short=FDR,long={False Discovery Rate}}
+\DeclareAcronym{gsea}{short=GSEA,long={gene set enrichment analysis}}
+\DeclareAcronym{FPKM}{short=FPKM,long={Fragments Per Kilobase of exon per Million reads}}
 \DeclareAcronym{HSD3B1}{short=\textit{HSD3B1},long={hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1},first-style=reversed,single={\textit{HSD3B1} (hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1)}}
 \DeclareAcronym{CSH1}{short=\textit{CSH1},long={chorionic somatomammotropin hormone 1},first-style=reversed,single={\textit{CSH1} (chorionic somatomammotropin hormone 1)}}
 \DeclareAcronym{CSH2}{short=\textit{CSH2},long={chorionic somatomammotropin hormone 2},first-style=reversed,single={\textit{CSH2} (chorionic somatomammotropin hormone 2)}}
