--- a/manuscript/extended_supplemental_material.Rnw
+++ b/manuscript/extended_supplemental_material.Rnw
@@ -18,7 +18,7 @@
 \usepackage{setspace}
 \usepackage{wrapfig}
 % \usepackage{txfonts}
-\usepackage{acro}
+\usepackage[macros=false]{acro}
 \usepackage{array}
 \usepackage{dcolumn}
 \usepackage{adjustbox}
