--- a/manuscript/common_latex.tex
+++ b/manuscript/common_latex.tex
@@ -45,6 +45,10 @@
 
 \newcommand{\lineagetableexplanationtypeiii}[2]{%
   \lineagetableexplanation[A nested type-III anova was used to
+  calculate p values.]{#1}{#2}}
+
+\newcommand{\lineagetableexplanationtypeiiishort}[2]{%
+  \lineagetableexplanation[A nested type-III anova was used to
   calculate p values, and the top 40 genes by $\text{log}_2$
   Fold-Change which changed significantly (FDR $\le 0.05$) are
   shown. ]{#1}{#2}}
